--- a/sidebar-interaction/demo/dev.html
+++ b/sidebar-interaction/demo/dev.html
@@ -25,7 +25,7 @@
                 "be-one-and-only/": "../../node_modules/be-one-and-only/",
                 "be-written/": "../../node_modules/be-written/",
                 "stream-orator/": "../../node_modules/stream-orator/",
-                "trans-render/": "../../node_modules/trans-render/",
+                "trans-render/": "../trans-render/",
                 "xtal-element/": "../../node_modules/xtal-element/",
                 "co-depends/": "../../"
             }
