--- a/sidebar-interaction/root.html
+++ b/sidebar-interaction/root.html
@@ -383,10 +383,9 @@
                 </button>
                 <div class="sidebar-wrapper">
                     <div class="sidebar-themeContainer">
-                        <label labelFor="theme-toggle" className={`sidebar-themeLabel${isDarkMode ? " switched" : ""
+                        <label part=theme-toggle-label labelFor="theme-toggle" class=sidebar-themeLabel className={`sidebar-themeLabel${isDarkMode ? " switched" : ""
                             }`}>
-                            <input class="sidebar-themeInput" type="checkbox" id="theme-toggle"
-                                onChange={handleThemeChange} />
+                            <input part=theme-toggle class="sidebar-themeInput" type="checkbox" id="theme-toggle">
                             <div class="sidebar-themeType light">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
                                     fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
