--- a/sidebar-interaction/root.html
+++ b/sidebar-interaction/root.html
@@ -383,8 +383,7 @@
                 </button>
                 <div class="sidebar-wrapper">
                     <div class="sidebar-themeContainer">
-                        <label part=theme-toggle-label labelFor="theme-toggle" class=sidebar-themeLabel className={`sidebar-themeLabel${isDarkMode ? " switched" : ""
-                            }`}>
+                        <label part=theme-toggle-label labelFor="theme-toggle" class=sidebar-themeLabel>
                             <input part=theme-toggle class="sidebar-themeInput" type="checkbox" id="theme-toggle">
                             <div class="sidebar-themeType light">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
