--- a/radial-nav-menu/demo/dev.html
+++ b/radial-nav-menu/demo/dev.html
@@ -9,7 +9,9 @@
 <body>
     <radial-nav-menu be-importing=co-depends/radial-nav-menu/root.html></radial-nav-menu>
 
-    <menu-option></menu-option>
+    <menu-option>
+        <img alt="Profile Image of a lion." slot=profile-image src="https://images.unsplash.com/photo-1614027164847-1b28cfe1df60?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8M3x8bGlvbnxlbnwwfHwwfHw%3D&auto=format&fit=crop&w=500&q=60">
+    </menu-option>
     <script type=importmap>
         {
             "imports": {
