--- a/radial-nav-menu/demo/dev.html
+++ b/radial-nav-menu/demo/dev.html
@@ -25,9 +25,9 @@
                 "be-based/": "../../node_modules/be-based/",
                 "be-bound/": "../../node_modules/be-bound/",
                 "be-decorated/": "../../node_modules/be-decorated/",
-                "be-definitive/": "../be-definitive/",
+                "be-definitive/": "../../node_modules/be-definitive/",
                 "be-exportable/": "../../node_modules/be-exportable/",
-                "be-ferried/": "../be-ferried/",
+                "be-ferried/": "../../node_modules/be-ferried/",
                 "be-having/": "../../node_modules/be-having/",
                 "be-headed/": "../../node_modules/be-headed/",
                 "be-hive/": "../../node_modules/be-hive/",
