--- a/app-menu-with-lock-screen/demo/dev.html
+++ b/app-menu-with-lock-screen/demo/dev.html
@@ -18,11 +18,12 @@
                 "be-definitive/": "../../node_modules/be-definitive/",
                 "be-exportable/": "../../node_modules/be-exportable/",
                 "be-ferried/": "../../node_modules/be-ferried/",
-                "be-having/": "../../node_modules/be-having/",
+                "be-having/": "../be-having/",
                 "be-headed/": "../../node_modules/be-headed/",
                 "be-hive/": "../../node_modules/be-hive/",
                 "be-importing/": "../../node_modules/be-importing/",
                 "be-one-and-only/": "../../node_modules/be-one-and-only/",
+                "be-spawn-of/": "../be-spawn-of/",
                 "be-written/": "../../node_modules/be-written/",
                 "stream-orator/": "../../node_modules/stream-orator/",
                 "trans-render/": "../../node_modules/trans-render/",
