--- a/app-menu-with-lock-screen/root.html
+++ b/app-menu-with-lock-screen/root.html
@@ -932,12 +932,17 @@
                 }
             </style>
             <be-hive></be-hive>
-            <div id=app></div>
+            <template id=loading-icon>
+                <i className="fa-solid fa-spinner-third" />
+            </template>
+            <div id=app>
+                <loading-icon id=app-loading-icon href=#loading-icon></loading-icon>
+            </div>
+            <div href=#test>test</div>
             <script id=shared-co-depends-app-menu-with-lock-screen nomodule be-having href=make.ts>
                 export const make=['co-depends/app-menu-with-lock-screen/make.js', 'https://esm.run/co-depends@0.0.24/app-menu-with-lock-screen/make.js'];
-                export const definitive = {
-                    impl: ['be-definitive/be-definitive.js', 'https://esm.run/be-definitive@0.0.90']
-                };
+                export const definitive = true;
+                export const spawnOf = true;
             </script>
         <!--end--><!--end--></div>
     </template>
