--- a/app-menu-with-lock-screen/demo/dev.html
+++ b/app-menu-with-lock-screen/demo/dev.html
@@ -14,7 +14,7 @@
             "imports": {
                 "be-based/": "../../node_modules/be-based/",
                 "be-bound/": "../../node_modules/be-bound/",
-                "be-decorated/": "../../node_modules/be-decorated/",
+                "be-decorated/": "../be-decorated/",
                 "be-definitive/": "../../node_modules/be-definitive/",
                 "be-exportable/": "../../node_modules/be-exportable/",
                 "be-ferried/": "../../node_modules/be-ferried/",
@@ -22,11 +22,14 @@
                 "be-headed/": "../../node_modules/be-headed/",
                 "be-hive/": "../../node_modules/be-hive/",
                 "be-importing/": "../../node_modules/be-importing/",
+                "be-indefinite/": "../be-indefinite/",
                 "be-one-and-only/": "../../node_modules/be-one-and-only/",
+                "be-scoped/": "../be-scoped/",
                 "be-spawn-of/": "../be-spawn-of/",
+                "be-transrendered/": "../be-transrendered/",
                 "be-written/": "../../node_modules/be-written/",
                 "stream-orator/": "../../node_modules/stream-orator/",
-                "trans-render/": "../../node_modules/trans-render/",
+                "trans-render/": "../trans-render/",
                 "xtal-element/": "../../node_modules/xtal-element/",
                 "co-depends/": "../../"
             }
