--- a/app-menu-with-lock-screen/root.html
+++ b/app-menu-with-lock-screen/root.html
@@ -939,7 +939,7 @@
                 </button>
                 <script data-settings='{
                     "hydratingTransform": {
-                        "buttonE": [{}, {"click": {"prop": "userStatus", "vft": "closest|user-status-button.beDecorated.scoped.scope.userStatus"}}]
+                        "buttonE": [{}, {"click": {"prop": "userStatus", "vft": "closest|[itemscope].beDecorated.scoped.scope.userStatus"}}]
                     },
                     "transform": {
                         "buttonE": [{"id": "id"}],
