--- a/app-menu-with-lock-screen/root.html
+++ b/app-menu-with-lock-screen/root.html
@@ -933,7 +933,7 @@
                 }
             </style>
             <be-hive></be-hive>
-            <template id=app-tbd>
+            <template id=b-g>
                 <div id="app-background">
                     <div id="app-background-image" className="background-image" />
                 </div>
@@ -961,12 +961,15 @@
                 <i className="fa-solid fa-spinner-third" />
             </template>
             <div id=app>
-                <app-tbd href=#app-tbd></app-tbd>
-                <user-status-button href=#user-status-button be-scoped='{
-                    "icon":  "fa-solid fa-arrow-right-from-arc",
-                    "id": "sign-out-button",
-                    "userStatus": "Logging In"
-                }'></user-status-button>
+                <b-g href=#b-g></b-g>
+                <div id="sign-in-button-wrapper">
+                    <user-status-button href=#user-status-button be-scoped='{
+                        "icon":  "fa-solid fa-arrow-right-from-arc",
+                        "id": "sign-out-button",
+                        "userStatus": "Logging In"
+                    }'></user-status-button>
+                </div>
+
                 <loading-icon href=#loading-icon></loading-icon>
             </div>
             <script id=shared-co-depends-app-menu-with-lock-screen nomodule be-having href=make.ts>
