--- a/app-menu-with-lock-screen/demo/dev.html
+++ b/app-menu-with-lock-screen/demo/dev.html
@@ -13,7 +13,7 @@
         {
             "imports": {
                 "be-based/": "../../node_modules/be-based/",
-                "be-bound/": "../../node_modules/be-bound/",
+                "be-bound/": "../be-bound/",
                 "be-decorated/": "../be-decorated/",
                 "be-definitive/": "../../node_modules/be-definitive/",
                 "be-exportable/": "../../node_modules/be-exportable/",
